Mudando calça para camisa e cor vermelha

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <th>Disponibilidade</th>
         </tr>
         <tr>
-            <td>Calça azul</td>
-            <td>Preta</td>
+            <td>Camiseta</td>
+            <td>Vermelha</td>
             <td>M</td>
             <td>R$ 70,00</td>
             <td>Em Estoque</td>
