Mudando roupa para camiseta

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <table>
         <tr>
-            <th>Roupa</th>
-            <th>Cor</th>
+            <th>Camiseta</th>
+            <th>Preta</th>
             <th>Tamanho</th>
             <th>Preço</th>
             <th>Disponibilidade</th>
